--- a/notebooks/220922_test.ipynb
+++ b/notebooks/220922_test.ipynb
@@ -21,21 +21,21 @@
      "output_type": "stream",
      "text": [
       "Test Results for 20 trials of length 100\n",
-      "(K-Squared) Statistic: 0.4429256175909626, p-value: 0.8013457246064708\n",
-      "(Chi-Square) Statistic: 13.592775041050905, p-value: 0.8068920161930534\n",
-      "(K-S) Statistic: 1.0, p-value: 0.0\n",
+      "(K-Squared) Statistic: 1.07164036096516, p-value: 0.5851891325586276\n",
+      "(Chi-Square) Statistic: 15.072664359861594, p-value: 0.7179678866346164\n",
+      "(K-S) Statistic: 0.13055865981823656, p-value: 0.842026920605822\n",
       "Test Results for 100 trials of length 100\n",
-      "(K-Squared) Statistic: 2.924174775630941, p-value: 0.2317520131562665\n",
-      "(Chi-Square) Statistic: 106.04088361358392, p-value: 0.29594222371419554\n",
-      "(K-S) Statistic: 1.0, p-value: 0.0\n",
+      "(K-Squared) Statistic: 3.662973578189812, p-value: 0.16017524384454226\n",
+      "(Chi-Square) Statistic: 98.0188742837883, p-value: 0.5089823543884974\n",
+      "(K-S) Statistic: 0.10026411668404006, p-value: 0.2499990187406994\n",
       "Test Results for 1000 trials of length 100\n",
-      "(K-Squared) Statistic: 15.34121498056861, p-value: 0.00046633444399264066\n",
-      "(Chi-Square) Statistic: 1183.8292568518395, p-value: 4.44439885184084e-05\n",
-      "(K-S) Statistic: 1.0, p-value: 0.0\n",
+      "(K-Squared) Statistic: 5.365162168067651, p-value: 0.0683864150791037\n",
+      "(Chi-Square) Statistic: 1000.123072815858, p-value: 0.48403471248482804\n",
+      "(K-S) Statistic: 0.06550394504304963, p-value: 0.00035677686868991156\n",
       "Test Results for 10000 trials of length 100\n",
-      "(K-Squared) Statistic: 30.555722390103366, p-value: 2.3169101263705641e-07\n",
-      "(Chi-Square) Statistic: 10582.977217081516, p-value: 2.4908944966406532e-05\n",
-      "(K-S) Statistic: 1.0, p-value: 0.0\n"
+      "(K-Squared) Statistic: 48.603320790281266, p-value: 2.79204870098407e-11\n",
+      "(Chi-Square) Statistic: 10712.285733338667, p-value: 4.039503498009703e-07\n",
+      "(K-S) Statistic: 0.06343610946542588, p-value: 1.9900239058660594e-35\n"
      ]
     }
    ],
@@ -65,21 +65,21 @@
      "output_type": "stream",
      "text": [
       "Test Results for 100 trials of length 20\n",
-      "(K-Squared) Statistic: 0.22033165908039576, p-value: 0.8956855918505645\n",
-      "(Chi-Square) Statistic: 98.90685413005272, p-value: 0.4837345259344805\n",
-      "(K-S) Statistic: 0.9999683287581669, p-value: 0.0\n",
+      "(K-Squared) Statistic: 13.379946377363222, p-value: 0.0012433161074583837\n",
+      "(Chi-Square) Statistic: 128.01077199281866, p-value: 0.026474519013059784\n",
+      "(K-S) Statistic: 0.1355817522848185, p-value: 0.045910369624963976\n",
       "Test Results for 100 trials of length 100\n",
-      "(K-Squared) Statistic: 6.460179061224222, p-value: 0.039553957339855\n",
-      "(Chi-Square) Statistic: 111.00502512562814, p-value: 0.19273396985655228\n",
-      "(K-S) Statistic: 1.0, p-value: 0.0\n",
+      "(K-Squared) Statistic: 1.1982538778813483, p-value: 0.5492909913851758\n",
+      "(Chi-Square) Statistic: 79.72311739559358, p-value: 0.9225381656486872\n",
+      "(K-S) Statistic: 0.10728250097698416, p-value: 0.1860041727566102\n",
       "Test Results for 100 trials of length 1000\n",
-      "(K-Squared) Statistic: 7.046926868868417, p-value: 0.0294970967883312\n",
-      "(Chi-Square) Statistic: 115.26524614254222, p-value: 0.12613538143834135\n",
-      "(K-S) Statistic: 1.0, p-value: 0.0\n",
+      "(K-Squared) Statistic: 7.748494670658107, p-value: 0.02076996481077017\n",
+      "(Chi-Square) Statistic: 74.14121422840333, p-value: 0.9707792606696644\n",
+      "(K-S) Statistic: 0.08659423167600971, p-value: 0.41782947823632444\n",
       "Test Results for 100 trials of length 10000\n",
-      "(K-Squared) Statistic: 2.8280122591480037, p-value: 0.24316717004976385\n",
-      "(Chi-Square) Statistic: 105.15351850740896, p-value: 0.3171346714983234\n",
-      "(K-S) Statistic: 1.0, p-value: 0.0\n"
+      "(K-Squared) Statistic: 3.1667479232222666, p-value: 0.2052813171841007\n",
+      "(Chi-Square) Statistic: 85.49154440437543, p-value: 0.8313588854710758\n",
+      "(K-S) Statistic: 0.05510542038730981, p-value: 0.9051782508357885\n"
      ]
     }
    ],
