--- a/221207_fitting.ipynb
+++ b/221207_fitting.ipynb
@@ -150,9 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "CramerVonMisesResult(statistic=33.2116450679824, pvalue=3.876094778476613e-09)"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.cramervonmises(test.stats['ta0'], 'beta', args=(0.5, 0.5))"
+   ],
    "metadata": {
     "collapsed": false
    }
